--- a/templates/detection.html
+++ b/templates/detection.html
@@ -15,7 +15,9 @@
         <a href="/" class="button">Detección de Emociones</a>
     </div>
     <div class="video-container">
-        <h1>Detección en Tiempo Real</h1>
+        <div class="title">
+            <h1>Detección en Tiempo Real</h1>
+        </div>
         <p id="statusMessage">Conectando a la cámara...</p>
 
         <img id="videoFeed" alt="Video Feed" style="display:none;"></img>
