fix responsive pages & added social links

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,13 @@
         <h1>Bienvenido a la Detección de Emociones</h1>
         <p>Detecta emociones en tiempo real usando tu cámara.</p>
         <a href="{{ url_for('detection') }}" class="button">Ir a Detección</a>
-
+    </div>
+    <footer class="footer">
+        <p>Powered by Yeison Ascanio</p>
+        <div class="social-links">
+            <a href="https://github.com/yeison-ascanio" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/yeison-ascanio/" target="_blank">LinkedIn</a>
+        </div>
+    </footer>
 </body>
 </html>
